<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.multicoolti.multicooltikids.ChooseVenueActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/button_venue_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="15dp">
        <TextView
            android:id="@+id/textView_venue_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/textView_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/date_and_time"
        android:layout_below="@id/button_venue_accept"
        android:textColor="@android:color/black"/>
    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/timePicker_meeting"
        android:timePickerMode="spinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView_date_time"/>
    <DatePicker
        android:layout_width="wrap_content"
        android:id="@+id/datePicker_meeting"
        android:datePickerMode="spinner"
        android:layout_height="100dp"
        android:layout_toRightOf="@id/timePicker_meeting"
        android:layout_below="@id/textView_date_time"/>
    <RadioGroup
        android:id="@+id/radioGroup_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker_meeting">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offer_venue"
            android:id="@+id/radioButton_new_venue"
            android:layout_margin="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_new_venue_name"
            android:text="@string/name"
            android:layout_marginLeft="25dp"
            android:textSize="17sp"
            android:layout_below="@id/radioButton_new_venue"/>
        <EditText
            android:id="@+id/editText_venue_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_new_venue_address"
            android:text="@string/address"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:layout_below="@id/textView_new_venue_name"/>
        <EditText
            android:id="@+id/editText_venue_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:imeOptions="actionDone"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_venue"
            android:id="@+id/radioButton_select_venue"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_below="@id/textView_new_venue_address"/>
    </RadioGroup>

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/radioGroup_meeting"
        android:id="@+id/listViewVenues" />
</RelativeLayout>


