<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.multicoolti.multicooltikids.MyProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:focusableInTouchMode="true">
        <TextView
            android:id="@+id/textView_profile_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <RelativeLayout
            android:id="@+id/layout_myprofile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_profile_settings"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_settings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editText_settings_name"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_width="150dp"
                android:imeOptions="actionDone"
                android:singleLine="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@xml/line"
            android:layout_below="@id/layout_myprofile_name"/>
        <RelativeLayout
            android:id="@+id/layout_myprofile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_settings_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/email"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editText_settings_email"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:layout_width="150dp"
                android:singleLine="true"
                android:imeOptions="actionDone"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@xml/line"
            android:layout_below="@id/layout_myprofile_email"/>
        <RelativeLayout
            android:id="@+id/layout_myprofile_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_settings_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/telephone"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editText_settings_telephone"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_width="150dp"
                android:singleLine="true"
                android:inputType="phone"
                android:imeOptions="actionDone" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@xml/line"
            android:layout_below="@id/layout_myprofile_telephone"/>
        <RelativeLayout
            android:id="@+id/layout_myprofile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line3"
            android:layout_margin="10dp">
            <RelativeLayout
                android:id="@+id/button_settings_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">
                <TextView
                    android:id="@+id/textView_settings_changePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/change_password"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/textView_settings_kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kids"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/layout_myprofile_password"
            android:textStyle="bold"/>
        <RelativeLayout
            android:id="@+id/button_settings_addKid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_below="@id/textView_settings_kids"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_kid"
                android:textSize="17sp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout_kid_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_settings_addKid"
            android:orientation="vertical">
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
