<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:focusableInTouchMode="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            android:id="@+id/imageView_kid_avatar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_account_grey600_48dp"/>
        <RelativeLayout
            android:id="@+id/layout_kid_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/imageView_kid_avatar">
            <TextView
                android:id="@+id/textView_kid_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/editText_kid_name"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_width="150dp"
                android:imeOptions="actionDone"
                android:singleLine="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_kid_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_kid_name"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_kid_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/date_of_birth"
                android:textSize="15sp"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/datePicker"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:datePickerMode="spinner" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_kid_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_kid_age"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_kid_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textSize="15sp"/>
            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_kid_sex"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_kid_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_kid_sex"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_kid_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/editText_kid_description"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:imeOptions="actionDone"
                android:layout_below="@id/textView_kid_description"
                android:inputType="textMultiLine"/>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
