<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:focusableInTouchMode="true">
    <RelativeLayout
        android:id="@+id/layout_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/textView_register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/editText_register_name"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_width="150dp"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@xml/line"
        android:layout_below="@id/layout_register_name"/>
    <RelativeLayout
        android:id="@+id/layout_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/textView_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_width="150dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@xml/line"
        android:layout_below="@id/layout_register_email"/>
        <RelativeLayout
            android:id="@+id/layout_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/password"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/editText_register_password"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_width="150dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@xml/line"
            android:layout_below="@id/layout_register_password"/>
        <RelativeLayout
            android:id="@+id/layout_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line3"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView_register_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/password_confirm"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/editText_register_password2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_width="150dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@xml/line"
            android:layout_below="@id/layout_register_password2"/>
    <RelativeLayout
        android:id="@+id/layout_register_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/textView_register_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/telephone"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/editText_register_telephone"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_width="150dp"
            android:singleLine="true"
            android:inputType="phone"
            android:imeOptions="actionDone" />
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>